Enhances the resize algorithm by taking in account more precisely all measures Finishes the RTL system for Arabic-style languages
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1612 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -49,7 +49,7 @@ arb:
     application:
     authentication:
       login: 'الدخول'
-      #>logout: 'Logout'
+      logout: 'الخروج'
       register: 'تسجيل شركة'
     company:
       about: 'وحول ايكيليبغ'
