--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -17,7 +17,6 @@ jpn:
       #>cash_create: 'Add a new cash'
       #>cash_update: 'Update cash: %{name}'
       #>cashes: 'Cash'
-      #>document_prepare: 'Choose the type of documents to print'
       #>document_print: 'Prints, exportations'
       #>draft_entries: 'Draft'
       #>financialyear: 'Period %{code}'
@@ -71,7 +70,6 @@ jpn:
       #>index: 'Hello, %{user}'
       #>listing_create: 'Add a new listing'
       #>listing_mail: 'Send an email to: %{listing}'
-      #>listing_nodes: 'Choose informations to extract'
       #>listing_update: 'Edit the listing: %{name}'
       #>listings: 'Listings and mailings'
       #>role_create: 'Add a new role'
@@ -975,6 +973,7 @@ jpn:
     #>to_date: 'To date'
     #>to_deliver: 'To deliver'
     #>to_embank: 'To embank'
+    #>toggle_print_mode: 'Activate/deactivate "Printable" mode'
     #>tool_update: 'Update tool'
     #>tool_use_create: 'Add a tool'
     #>tools: 'Used tools'
