Fixes the bug on auto_complete with skiping default style Begins to add :disable_with option in submits
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1617 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -842,6 +842,7 @@ arb:
     pertinence: '{{value}}%'
     #>phone: 'Pho.'
     planned_on: 'قرر يوم'
+    #>please_wait: 'Please wait...'
     previous: 'السابق'
     previous_bank_statement: 'رقم الكشف المصرفي السابق{{number}}'
     #>price: 'Price'
