--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -793,6 +793,7 @@ jpn:
     #>pertinence: '%{value}%'
     #>phone: 'Pho.'
     #>planned_on: 'Planned on'
+    #>please_wait: 'Please wait...'
     previous: '前へ'
     #>previous_bank_statement: 'Previous account statement N°%{number}'
     #>price: 'Price'
