Fixes the update of the prices (#154)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1620 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -852,7 +852,7 @@ arb:
     prices: 'السار المنتجات' #!
     prices_export: 'CSV اسعار التصدير ضمن'
     #>prices_for_all: 'All the prices'
-    #>prices_for_client: 'Prices of sale'
+    #>prices_for_clients: 'Prices of sale'
     #>prices_for_suppliers: 'Prices of purchase of supplier'
     prices_import: 'CSV استيراد بيان الاسعار  ضمن'
     print: 'طباعة'
