--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -163,6 +163,7 @@ eng:
       price_create: 'Add a new price'
       #>price_delete: 'Price delete'
       #>price_find: 'Price find'
+      #>price_update: 'Price update'
       prices: 'Prices'
       #>prices_export: 'Prices export'
       prices_import: 'Import prices in CSV'
@@ -925,7 +926,7 @@ eng:
     price_amount_with_taxes: 'Price amount with taxes'
     prices_export: 'Export your prices in CSV'
     prices_for_all: 'All the prices'
-    prices_for_client: 'Prices of sale'
+    prices_for_clients: 'Prices of sale'
     prices_for_suppliers: 'Prices of purchase of supplier'
     prices_import: 'Importer un fichier CSV'
     print: 'Print documents'
