Fixes the bug on operation create (#144)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1621 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -284,7 +284,7 @@ eng:
       operation_nature_update: 'update Type of Operation: %{name}'
       operation_natures: 'Types of Operation'
       operation_update: 'Update Operation %{name}'
-      operations: 'Opetations'
+      operations: 'Operations'
       shape: 'Shape %{name}'
       shape_create: 'Add a new shape'
       #>shape_delete: 'Shape delete'
