Fixes the bugs on listing_node creation and boolean conditions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1624 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1186,7 +1186,7 @@ jpn:
         #>finishes_cs: 'Finishes with (case-sensitive)'
         #>ge: '≥'
         #>gt: '>'
-        #>in: 'Is equals to one o this folowwing elements'
+        #>in: 'Is equals to one of this following elements'
         #>is_false: 'Is false'
         #>is_true: 'Is true'
         #>le: '≤'
