Adds the new controller Store for public access (#118)
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1629 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -377,6 +377,8 @@ eng:
       #>profession_delete: 'Profession delete'
       #>profession_update: 'Profession update'
       #>professions: 'Professions'
+    store:
+      index: 'Welcome'
   controllers:
     accountancy: 'Accountancy'
     application: 'Application'
@@ -387,6 +389,7 @@ eng:
     production: 'Production'
     relations: 'Relationships'
     #>resources: 'Resources'
+    store: 'Store'
   errors:
     template:
       body: 'There were problems with the following fields:'
