--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -257,6 +257,8 @@ arb:
       observation_create: 'اضافة ملاحظة'
       observation_update: 'تعديل الملاحظة'
     resources:
+    store:
+      #>index: 'Welcome'
   controllers:
     accountancy: 'المحاسبة'
     application: 'تطبيق'
@@ -266,6 +268,7 @@ arb:
     management: 'الادارة'
     production: 'المنتج'
     relations: 'العلاقات'
+    #>store: 'Store'
   errors:
     template:
       #>body: 'There were problems with the following fields:'
