--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -257,6 +257,8 @@ fra:
       observation_create: 'Ajouter une observation'
       observation_update: 'Modifier une observation'
     resources:
+    store:
+      index: 'Bienvenue'
   controllers:
     accountancy: 'Comptabilité'
     application: 'Application'
@@ -266,6 +268,7 @@ fra:
     management: 'Commerce'
     production: 'Production'
     relations: 'Relations'
+    store: 'Boutique'
   errors:
     template:
       body: 'Il y a eu des problèmes avec les champs suivants :'
